--- a/V1/styles.css
+++ b/V1/styles.css
@@ -35,7 +35,7 @@ M2LO15 Apply colors using CSS (CSS, see 2-5 Working with Color in CSS)
 */
 h2{
 	color: black;
-	font-size: 1.5em;
+	font-size: 1.9em;
 }
 aside{
 	text-align: right;
@@ -54,6 +54,7 @@ M2LO5 Demonstrate contextual selectors (CSS, specify 2 times, showing two differ
 */
 dt{
 	color: black;
+	font-size: large;
 }
 /*
 M2LO5 Demonstrate contextual selectors (CSS, specify 2 times, showing two different types of contextual selectors as shown in Figure 2-12, Contextual Selectors, of the textbook)
@@ -107,6 +108,7 @@ M2LO14 Demonstrate and explain the use of progressive enhancement in CSS (CSS, s
 /*
 Progressive Enhancement is starting with a good foundation and adding enhancements. Clean code and CSS are the beginning layers. I am trying to add the simple things first and the bells and whistles as we learn them.
 */
-dt{
-	font-size: large;
+h3{
+	font-size: 1.9em;
+	color: black;
 }
